<resources>
    <bool name="leak_canary_allow_in_non_debuggable_build">true</bool>

    <string name="app_name">Read Book</string>


    <string name="pic_loading">插图加载中...</string>

    <!--阅读器-->
    <string name="contents">目录</string>
    <string name="light">亮度</string>
    <string name="cache">缓存</string>
    <string name="listen">听书</string>
    <string name="brief">简介</string>
    <string name="label">标签</string>
    <string name="setting">设置</string>
    <string name="book_read_mode_day">夜间</string>
    <string name="font">字体</string>
    <string name="simple_font">简体</string>
    <string name="traditional_font">繁体</string>
    <string name="font_size">字号</string>
    <string name="font_bg">背景</string>
    <!--  翻页  -->
    <string name="page_mode">翻页</string>
    <string name="simulation">仿真</string>
    <string name="cover">覆盖</string>
    <string name="scroll">滚动</string>
    <string name="none">无</string>
</resources>