<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_setting"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/read_menu_color"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="5dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_speed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/font_size"
            android:textColor="@color/smallColor"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_font_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/bg_coner_line"
            android:gravity="center"
            android:padding="5dp"
            android:text="Aa-"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/tv_speed"
            app:layout_constraintRight_toLeftOf="@+id/tv_size"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_speed"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/tv_font_minus"
            app:layout_constraintRight_toLeftOf="@+id/tv_font_plus"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="40" />

        <TextView
            android:id="@+id/tv_font_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_coner_line"
            android:gravity="center"
            android:padding="5dp"
            android:text="Aa+"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/tv_size"
            app:layout_constraintRight_toLeftOf="@+id/tv_font_default"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_font_default"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="默认"
            android:textSize="14sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/tv_font_plus"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_page"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/page_mode"
            android:textColor="@color/smallColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rg_page_mode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_page"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_simulation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/bg_listen"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/simulation"
                android:textColor="@drawable/text_color"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_cover"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/bg_listen"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/cover"
                android:textColor="@drawable/text_color"
                android:textSize="14sp" />


            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_scroll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/bg_listen"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/scroll"
                android:textColor="@drawable/text_color"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_none"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/bg_listen"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/none"
                android:textColor="@drawable/text_color"
                android:textSize="14sp" />
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/font_bg"
            android:textColor="@color/smallColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_bg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.appcompat.widget.LinearLayoutCompat>