<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.qq.readbook.ui.book.ReadBookViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.book.ReadBookActivity">


        <com.qq.readbook.weight.page.PageView
            android:id="@+id/pageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


        <!--        顶部 Bar-->
        <FrameLayout
            android:id="@+id/fl_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x88"
            android:background="@color/white"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/iv_toolBar_Bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent" />

            <TextView
                android:id="@+id/tv_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:gravity="center"
                android:maxEms="10"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/toolbar_text_color"
                android:textSize="@dimen/x36" />

            <ImageView
                android:id="@+id/iv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <com.hqq.core.widget.FilterImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{vm::onBack}"
                android:paddingLeft="@dimen/x15"
                android:paddingRight="@dimen/x26"
                android:src="@mipmap/ic_back_gray" />

            <TextView
                android:id="@+id/tv_right"
                style="@style/def_text.30.666"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/x20"
                android:text="换源">

            </TextView>

        </FrameLayout>

        <TextView
            android:id="@+id/tv_url"
            style="@style/def_text.24.999"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ellipsize="end"
            android:lines="1"
            android:onClick="@{vm::onOpenUrl}"
            android:paddingHorizontal="@dimen/x20"
            android:paddingVertical="@dimen/x5"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fl_layout"
            tools:text="123123123123123123123123" />


        <TextView
            android:paddingVertical="@dimen/x5"
            android:paddingHorizontal="@dimen/x20"
            style="@style/def_text.26.999"
            android:id="@+id/tv_down_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_color"
            android:visibility="@{vm.cacheSchedule?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/ll_cache"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="请选择缓存" />

        <RadioGroup
            android:id="@+id/ll_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/read_menu_color"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="@{vm.showCache?View.VISIBLE :View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/ll_bottom_menu"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/tv_cache50"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/bg_listen"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:text="后面50章"
                android:textColor="@drawable/text_color"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/tv_cache100"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/bg_listen"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:text="后面100章"
                android:textColor="@drawable/text_color"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/tv_cacheAll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/bg_listen"
                android:button="@null"
                android:gravity="center"
                android:padding="5dp"
                android:text="后面全部"
                android:textColor="@drawable/text_color"
                android:textSize="14sp" />

        </RadioGroup>


        <!--亮度 调节-->
        <androidx.appcompat.widget.LinearLayoutCompat

            android:id="@+id/ll_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/read_menu_color"
            android:gravity="bottom"
            android:padding="5dp"
            android:visibility="@{vm.showLight?View.VISIBLE :View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/ll_bottom_menu"
            tools:visibility="gone">

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/sb_brightness"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:max="255"
                android:maxHeight="3dp"
                android:minHeight="3dp"
                android:progressDrawable="@drawable/seekbar_bg"
                android:thumb="@drawable/seekbar_thumb"
                android:thumbOffset="10dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBookReadMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:drawableTop="@{vm.themeMode?@drawable/ic_read_menu_night : @drawable/ic_menu_mode_night_normal }"
                android:gravity="center"
                android:onClick="@{vm::onThemeMode}"
                android:text='@{vm.themeMode?"夜间": "日间"}'
                android:textColor="@color/smallColor"
                android:textSize="16sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>


        <!--底部页面-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_bottom_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/read_menu_color"
            android:onClick="@{vm::onLayoutMenu}"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/ic_contents"
                android:gravity="center"
                android:text="@string/contents"
                android:textColor="@color/smallColor"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_light"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/ic_light"
                android:gravity="center"
                android:onClick="@{vm::onClickLight}"
                android:text="@string/light"
                android:textColor="@color/smallColor"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cache"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/ic_cache"
                android:gravity="center"
                android:onClick="@{vm::onCache}"
                android:text="@string/cache"
                android:textColor="@color/smallColor"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@mipmap/ic_read_setting"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/smallColor"
                android:textSize="12sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>